--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,10 @@ debian/.debhelper/
 debian/files
 debian/libsdl*/
 debian/tmp/
+android-project-kotlin/.gradle/
+android-project-kotlin/
+.gradle/
+gradlew.bat
+gradlew
+gradle/
+local.properties
